2007-03-16  Paolo Bonzini  <bonzini@gnu.org>

PR rtl-optimization/30125
	* df.h (df_get_live_out): New prototype.
	* df-problems.c (df_get_live_out): New.
	(df_ri_bb_compute): Use it.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/dataflow-branch@122980 138bc75d-0d04-0410-961f-82ee72b054a4